# Credit_Risk_Model_Project

./: .env  .gitignore  README.md  crm.ipynb  pyproject.toml  schema-diagram
notebooks/: base_ml_model_full_data.ipynb  raw_dataset_cleaning.ipynb  raw_dataset_depth2_cleaning.ipynb  started_notebook.ipynb  starter_notebook.ipynb  utils.py
notebooks/exploring_dataset_first_time/: applprev_dataset.ipynb  base_dataset.ipynb  credit_bureau_dataset.ipynb  other_dataset.ipynb  person_dataset.ipynb  schema_diagram.ipynb  static_dataset.ipynb  tax_registry_dataset.ipynb
notebooks/exploring_plan2_dataset/: first_look.ipynb
notebooks/rough_notebook/: rough_notebooks.ipynb
saved_pipeline_files/: categorical_to_integers_mapper.pickle
src/: data_cleaning.py  data_preprocessing.py
src/utils/: common.py
version_1/notebooks/rough_notebook/: rough_notebooks.ipynb
