[tool.poetry]
name = "credit-risk-model-project"
version = "0.1.0"
description = ""
authors = ["shirsh10mall <shirsh10mall@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
pandas = "^2.2.2"
pyspark = "^3.5.1"
plotly = "^5.22.0"
nbformat = "^5.10.4"
matplotlib-venn = "^0.11.10"
matplotlib = "^3.9.1"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
