[tool.poetry]
name = "credit-risk-model-project"
version = "0.1.0"
description = "Credit Risk Model Project"
authors = ["shirsh10mall <shirsh10mall@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "2.0.0"
pandas = "^2.2.2"
pyspark = "^3.5.1"
plotly = "^5.22.0"
nbformat = "^5.10.4"
matplotlib-venn = "^0.11.10"
matplotlib = "^3.9.1"
tqdm = "^4.66.4"
loguru = "^0.7.2"
ruff = "^0.5.4"
isort = "^5.13.2"
python-dotenv = "^1.0.1"
catboost = "^1.2.5"
xgboost = "^2.1.0"
scikit-learn = "^1.5.1"
pyarrow = "^17.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
